services/internal-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ofg-$ENV-$FACING-internal-web-app
  annotations:
    linkerd.io/inject: enabled
