services/internal-web/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: internal-web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override internal-web-app.ofg-$ENV-$FACING-web-app.svc.cluster.local:80;
      grpc_set_header l5d-dst-override internal-web-app.ofg-$ENV-$FACING-web-app.svc.cluster.local:80;
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - rer-internal.$ENV.rercloud.co.uk
      secretName: internal-web-app-tls-cert
  rules:
    - host: rer-internal.$ENV.rercloud.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: internal-web-app
              servicePort: 80
